# RTEP

./: .eslintignore  .eslintrc  .gitignore  .gitlab-ci.yml  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.electron.js  webpack.main.js  webpack.prod.js
engine/: main.py  pyproject.toml
engine/src/engine/: main.py
engine/tests/: test_engine.py
main/: main.ts
public/: index.html
src/: App.scss  App.tsx  _theme.scss  index.scss  index.tsx
test/: initial.spec.ts
